NXP-23797: Fix hot reload when working with CMIS connector